# snkrs-simulator

./: .env.example  .gitignore  README.md  docker-compose.yaml  justfile
config/: nginx-grpc.conf  otel-collector-config.yaml  otel-collector-spaces.yaml
event-generator/: Dockerfile  pyproject.toml  send_test_events.py
load-generator/: Dockerfile  README.md  corpus_loader.py  distributions.py  gen_corpus.py  generate.py  inventory.py  logs.py  metrics.py  patterns.py  requirements.txt  spans.py  topology.py  users.py  writer.py
load-generator/corpus/: endpoints.json  error_messages.json  incidents.json  log_templates.json  products.json  services.json
scripts/: s3-ls.py  s3-rm.py
