[project]
name = "event-generator"
version = "1.0.0"
description = "Nike SNKRS drop traffic simulator — generates traces, logs, and metrics via OTEL"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-sdk==1.23.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.23.0",
    "opentelemetry-api==1.23.0",
]
